<resources>
    <string name="app_name">Currency Convertor</string>
    <string name="app_settings">Application Settings</string>
    <string name="options">&#8230;</string>
    <string name="facebook_post">Facebook</string>
    <string name="delAllDbData">DELETE Local DB Data.</string>
    <string name="init_message">EUR is the base currency. Application NOT UPDATED.</string>
    <string name="switch_txt">&lt;- Switch -&gt;</string>
    <string name="clear_txt">Clear</string>
    <string name="calc_txt">Calc</string>
    <string name="hint_cur_1">input ???</string>
    <string name="hint_cur_2">result</string>
    <string name="spn_img_descr">currencys flag</string>
    <string name="hint_spin_cur">Choose currency</string>
    <string name="refresh">Refresh</string>
    <string name="DBSource">DB</string>
    <string name="URLsource">URL</string>
    <string name="last_upd_txt">Last update:</string>
    <string name="upd_text">Update online</string>
    <string name="Try_to_update">Trying to download data from ECB...</string>
    <string name="No_Auto_update">Auto update is set to false.</string>
    <string name="No_Need_to_update">Base currecy has not changed.\n No need to update.</string>
    <string name="No_connection">Internet Connection NOT available.</string>
    <string name="InternetCon_not_checked">Internet Connection has not been checked.</string>
    <string name="Offline_Mode">OFFLINE MODE. Data source is local DB.</string>
    <string name="facebook_app_id">541898549491120</string>
    <string name="title_activity_settings">Settings</string>
    <string name="DataInserted">Data inserted to local DB.</string>
    <string name="DataNotInserted">Data NOT inserted to local DB.</string>

    <string name="pref_basic_group">Basic settings</string>
    <string name="pref_advance_group">Advance settings</string>

    <string name="pref_autoUpdate_label">Auto Update on start up</string>
    <string name="pref_autoUpdate_key" translatable="false">auto_upd</string>
    <string name="pref_autoUpdate_sum" translatable="false">Download data from ECB server</string>
    <string name="pref_autoUpdate_def" translatable="false">true</string>

    <string name="pref_selectBase_label">Select Base Currency</string>
    <string name="pref_selectBase_key" translatable="false">baseCurrency</string>
    <string name="pref_selectBase_sum" translatable="false">Please select the base currency</string>
    <string name="pref_selectBase_def" translatable="false">EUR</string>

    <string name="pref_BaseCurAutoUpdate_label">Auto Update on Base Cur update</string>
    <string name="pref_BaseCurAutoUpdate_key" translatable="false">auto_upd2</string>
    <string name="pref_BaseCurAutoUpdate_sum" translatable="false">Re-Download data fom ECB server</string>
    <string name="pref_BaseCurAutoUpdate_def" translatable="false">true</string>
</resources>
