<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/m20_options"
        android:icon="@mipmap/options"
        android:title="@string/options"
        android:orderInCategory="100"
        android:enabled="true"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/m21_settings"
                android:icon="@mipmap/settings"
                android:title="@string/app_settings"
                android:orderInCategory="100"
                android:enabled="true"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/m22_refresh"
                android:icon="@mipmap/refresh"
                android:title="@string/refresh"
                android:orderInCategory="101"
                android:enabled="true"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/m23_fb_share_button"
                android:icon="@mipmap/facebook"
                android:title="@string/facebook_post"
                android:orderInCategory="102"
                android:enabled="true"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/m24_delAllDbData"
                android:icon="@mipmap/about"
                android:title="@string/delAllDbData"
                android:orderInCategory="103"
                android:enabled="true"
                app:showAsAction="ifRoom" />
        </menu>

    </item>
</menu>
