<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="false"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:expanded="true">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/welcomeMessage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/init_message" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Spinner
            android:id="@+id/spin_cur_1"
            android:inputType="text"
            android:prompt="@string/hint_spin_cur"
            android:spinnerMode="dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@android:style/Widget.Holo.Light.Spinner"
            android:layout_weight="0.30" />
        <Button
            android:id="@+id/btn_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.40"
            android:text="@string/switch_txt" />
        <Spinner
            android:id="@+id/spin_cur_2"
            android:inputType="text"
            android:prompt="@string/hint_spin_cur"
            android:spinnerMode="dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@android:style/Widget.Holo.Light.Spinner"
            android:layout_weight="0.30" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/edt_cur_1"
                android:hint="@string/hint_cur_1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.30"
                android:digits="0123456789."
                android:inputType="numberDecimal"/>
            <Button
                android:id="@+id/btn_calc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.20"
                android:text="@string/calc_txt" />
            <Button
                android:id="@+id/btn_clear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.20"
                android:text="@string/clear_txt" />
            <EditText
                android:id="@+id/edt_cur_2"
                android:hint="@string/hint_cur_2"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.30"
                android:digits="0123456789."
                android:inputType="numberDecimal"/>

    </LinearLayout>

    <ListView
        android:id="@+id/listview_currencies"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>

</LinearLayout>
